--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="w-full max-w-lg bg-white p-8 rounded-xl shadow-2xl border border-gray-200">
         
         <header class="mb-8 text-center">
-            <h1 class="text-3xl font-extrabold text-indigo-700">💰 Custo de Viagem Inteligente</h1>
+            <h1 class="text-3xl font-extrabold text-indigo-700">Custo de Viagem</h1>
             <p class="text-gray-500 mt-1">Descubra quanto você gastará com combustível.</p>
         </header>
 
